force-app/main/default/objects/IncomingTelephoneCallInformation__c/IncomingTelephoneCallInformation__c.object-meta.xml
<CustomObject>
    <label>入電情報</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{00000}</displayFormat>
        <label>入電情報_連番</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>