force-app/main/default/objects/IncomingTelephoneCallInformation__c/fields/Call_ReflectionDestination__c.field-meta.xml
<CustomField>
    <fullName>Call_ReflectionDestination__c</fullName>
    <label>入電情報_反映先</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>火新異動</fullName>
            </value>
            <value>
                <fullName>自動継続停止</fullName>
            </value>
            <value>
                <fullName>証券再発行</fullName>
            </value>
            <value>
                <fullName>自賠責解約（書類発送）</fullName>
            </value>
            <value>
                <fullName>自賠責解約（書類不備）</fullName>
            </value>
            <value>
                <fullName>自賠責解約（書類督促）</fullName>
            </value>
            <value>
                <fullName>自賠責解約（解約完了）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>