force-app/main/default/objects/IncomingTelephoneCallInformation__c/fields/CallPerson__c.field-meta.xml
<CustomField>
    <fullName>CallPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>入電担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CallPerson_relation</relationshipName>
    <type>Lookup</type>
</CustomField>