force-app/main/default/objects/IncomingTelephoneCallInformation__c/fields/ConversationalPartner__c.field-meta.xml
<CustomField>
    <fullName>ConversationalPartner__c</fullName>
    <label>会話相手</label>
    <length>50</length>
    <type>Text</type>
</CustomField>