force-app/main/default/objects/IncomingTelephoneCallInformation__c/fields/CustomerCallData__c.field-meta.xml
<CustomField>
    <fullName>CustomerCallData__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>カスタマーセンターコールデータ</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>入電情報</relationshipLabel>
    <relationshipName>CustomerCallData_relation</relationshipName>
    <type>Lookup</type>
</CustomField>