force-app/main/default/objects/IncomingTelephoneCallInformation__c/fields/IncomingTelephoneNumber__c.field-meta.xml
<CustomField>
    <fullName>IncomingTelephoneNumber__c</fullName>
    <label>着信電話番号</label>
    <type>Phone</type>
</CustomField>