force-app/main/default/objects/IncomingTelephoneCallInformation__c/fields/InquiryDetail__c.field-meta.xml
<CustomField>
    <fullName>InquiryDetail__c</fullName>
    <label>照会内容詳細</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>