force-app/main/default/objects/IncomingTelephoneCallInformation__c/fields/ResponseContent__c.field-meta.xml
<CustomField>
    <fullName>ResponseContent__c</fullName>
    <label>回答詳細</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>